# opendata-etl

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  dg.toml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: __init__.py  access.py  app.py  auth_keys.py  connections.py  factory.py  params.py  query_runner.py  rate_limit.py  sql_check.py
docs/: .nav.yml  README.md  api-security.md  column-names.md  deployment-profiles.md  deployment-repositories.md  index.md  legacy-nycdb-importer.md  local-development.md  python-derived-jobs.md  release.md
docs/deployment/: aws-components.md  aws-database-access.md  aws-first-deploy.md  aws-maintenance.md  aws-poc-validation.md  aws-s3-copy-bootstrap.md  aws-scaled.md  digitalocean-scaled.md
examples/: definitions.local.yml  definitions.poc.yml  definitions.prod.yml
examples/definition-repo/: README.md  repo.yml
examples/deployment-repo/: .env.example  README-automation.md  README.md  definitions.local.yml  definitions.poc.yml  docker-compose.yml
infra/aws/: .gitignore  .terraform.lock.hcl  README.md  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
pipeline/: __init__.py  credentials.py  dagster_defs.py  dataset_materialize.py  definitions.py  derived_context.py  derived_load.py  derived_runner.py  derived_validate.py  factory.py  landing.py  monitoring.py  notifications.py  opendata_dbt.py  provisioning.py  repo_yaml.py  sample_csv_validation.py  source_fingerprint.py  source_snapshots.py  sql_extensions.py  table_integrity.py  validation.py
pipeline/extract/: __init__.py  csv_integrity.py  http.py  landing.py  orchestrate.py  s3_source.py  shapefile.py
pipeline/import_legacy/: __init__.py  emit.py  importer.py  (+9 more)
schemas/: api_endpoint.schema.json  dataset.schema.json  definitions.schema.json  derived_job.schema.json  repo.schema.json
scripts/: README.md  aggregate_docs.py  build-runtime-bundle.sh  gen_docs.py  import_legacy_nycdb.py  issue_api_key.py  preview_column_names.py  provision_roles.py  validate_definitions.py
tests/: conftest.py  test_access.py  test_api_factory.py  test_api_rate_limit.py  test_column_names.py  test_credentials_and_extract.py  test_csv_columns.py  test_csv_integrity.py  test_dbt.py  test_definitions_loader.py  test_derived_e2e.py  test_derived_factory.py  test_derived_runner.py  test_derived_schema.py  test_derived_validate.py  test_docs_scripts.py  test_factory.py  test_import_legacy_headers.py  test_import_legacy_indexes.py  test_import_legacy_oca_fks.py  test_landing.py  test_loader.py  test_monitoring.py  test_monitoring_new_columns.py  test_multi_asset_dedup.py  test_nycdb_repo.py  test_orchestrate.py  test_provisioning.py  test_s3_copy_rds.py  test_source_fingerprint.py  test_source_fingerprint_skip.py  test_source_schema.py  test_split_extract_load.py  test_sql_check.py  test_sql_extensions.py  test_step15_e2e.py  test_table_integrity.py  test_validate_sample_csv.py
(+79 files in other folders)
