[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opendata-etl"
version = "0.0.0"
description = "AGPLv3 framework for Postgres-targeted ETL, derived jobs, and read-only APIs from external definition repositories."
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.11"
authors = [{ name = "opendata-etl contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "PyYAML>=6.0.1",
  "jsonschema>=4.21.0",
  "pytest>=8.0.0",
]
compose = [
  "dagster==1.13.4",
  "dagster-webserver==1.13.4",
  "fastapi>=0.115.6,<0.116",
  "uvicorn[standard]>=0.32.0,<0.33",
  "PyYAML>=6.0.1",
  "jsonschema>=4.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "api*"]

[tool.pytest.ini_options]
markers = [
    "needs_git: requires git with normal filesystem permissions for .git/hooks",
]
